--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+
+#content{
+    display: flex;
+    margin-top: 25px;
+    justify-content:space-between;
+}
 .card {      
  border: 1px solid #f3f3f3;
  background-color: #fff;
@@ -44,7 +50,7 @@
  gap: 4px;
  font-weight: 400;
  font-size: 10px;
- font-color: #060b35;
+ color: #060b35;
  padding-left: 16px;
 }
 
@@ -67,9 +73,9 @@
 .container2 {
  display: flex;
  justify-content: space-between;
- Font weight: 700;
- font size: 16px;
- line height: 18px;
+ Font-weight: 700;
+ font-size: 16px;
+ line-height: 18px;
  color: #060b35;
 }
 
